# request-guard-mcp

./: .env.example  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  container.yml  release.yml  security.yml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml  service.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  compatibility-matrix.md  performance-tuning.md  runbook.md  security-model.md  tool-contracts.md
schemas/: batch_classify.json  classify.json  classify_response.json
src/: auth.rs  config.rs  error.rs  lib.rs  limits.rs  main.rs  state.rs  telemetry.rs
src/engines/: anomaly.rs  explain.rs  mod.rs  policy.rs  rules.rs  scorer.rs
src/integrations/: blocklist.rs  cache.rs  geoip.rs  mod.rs  postgres.rs  redis.rs  reputation.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tool_registry.rs  transport_ws.rs
src/models/: enums.rs  mod.rs  request.rs  response.rs  signals.rs
src/tools/: abuse_pattern_match.rs  batch_classify.rs  calibration_report.rs  canary_eval.rs  classify.rs  config_snapshot.rs  drift_report.rs  enrich_asn.rs  enrich_ip.rs  enrich_ua.rs  explain.rs  feature_flags.rs  feedback.rs  health.rs  mod.rs  model_info.rs  queue_status.rs  redact_preview.rs  replay_decision.rs  score_breakdown.rs  self_test.rs  threat_lookup.rs  validate_payload.rs  warmup.rs
src/util/: hashing.rs  json.rs  mod.rs  net.rs  time.rs
tests/: auth_ws.rs  contract_batch.rs  contract_classify.rs  contract_explain.rs  load_smoke.rs  regression_known_cases.rs
tests/golden/: clean_browser.json  gptbot_attack.json
